# align_trajectory

./: CMakeLists.txt  README.md  main.cpp
data/: lidar-trajectory.txt
include/: compute_sim3.h
